# quasar

./: CMakeLists.txt  Makefile  README  README.md  common.h  fetch.c  fetch.h  main.c  parse.c  parse.h  quasar.c  quasar.h  rmq-config-stuff  run-only-once  znieksztalcenie_dzwieku.c
100prisoners/: Makefile  main.c  stats.pl
anixe_aplikacja/dookola/: README.dookola  dookola.pl  dookola_test.pl
anixe_aplikacja/duplikatochron/: README.duplikatochron  duplikatochron.pl  duplikatochron_dane
anixe_aplikacja/zzabezp/: README.zzabezb  zzabezp.pl  zzabezp.xml
ci_scripts/: ci  report
crux-tools/: README  pkg-not.pl  pkgmk.conf  pmk
elfutils/: Makefile  elfutils.pl
elfutils/lib/: ElfUtils.pm
elfutils/t/: 01-init.t  02-stringify.t
elfutils/t/elf_for_tests/: elf
problem/1/perl/: solve_1.pl
problem/1/python/: solve_1.py
problem/10/python/: solve_10.py
problem/12/python/: solve_12.py  triangular.c
problem/13/perl/: solve_13.pl
problem/14/perl/: solve_14.pl
problem/14/python/: solve_14.py
problem/15/python/: solve_15.py  solve_15b.py
problem/16/c/: Makefile  solve_16  solve_16.c  solve_16.d  sumitup
problem/17/perl/: solve_17.pl
problem/18/perl/: solve_18.pl  solve_18b.pl  solve_18brute.pl
revdep6/: Makefile  revdep6.pl
revdep6/t/: 01-init.t
src/: CMakeLists.txt  Makefile.old  common.h  fetch.c  fetch.h  main.c  parse.c  parse.h
tools/: README  footcmp.pl  mkpass.pl  qtc.pl
vstrace/: .classpath  .project  README.md  project.clj
vstrace/doc/: intro.md
xxhash-read-only/: Makefile  main.c
xxhash-read-only/.svn/: wc.db
(+18 files in other folders)
